--- a/Aws.Api.csproj
+++ b/Aws.Api.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="AWSSDK.EC2" Version="4.0.13.6" />
+    <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.2" />
+    <PackageReference Include="AWSSDK.RDS" Version="4.0.2.6" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
   </ItemGroup>
 
 </Project>
