--- a/Aws.Api.csproj
+++ b/Aws.Api.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="AWSSDK.EC2" Version="4.0.13.6" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="4.0.2" />
     <PackageReference Include="AWSSDK.RDS" Version="4.0.2.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.17" />
   </ItemGroup>
 
 </Project>
