add another validation by auth0

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,9 @@
   "Auth0": {
     "Authority": "replace",
     "Audience": "replace"
+  },
+  "Auth0App2": {
+    "Issuer": "AgusFassina",
+    "Audience": "Agusfassina"
   }
 }
