--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -8,5 +8,9 @@
   "Auth0": {
     "Authority": "replace",
     "Audience": "replace"
+  },
+  "Auth0App2": {
+    "Issuer": "AgusFassina",
+    "Audience": "Agusfassina"
   }
 }
