--- a/Aws.Api.csproj
+++ b/Aws.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="AWSSDK.CostExplorer" Version="4.0.2.8" />
     <PackageReference Include="AWSSDK.Lambda" Version="4.0.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
