add region in the appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,8 @@
   "Auth0App2": {
     "Issuer": "AgusFassina",
     "Audience": "Agusfassina"
+  },
+  "Aws":  {
+    "Region": "us-west-2"
   }
 }
