--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -12,5 +12,8 @@
   "Auth0App2": {
     "Issuer": "AgusFassina",
     "Audience": "Agusfassina"
+  },
+  "Aws":  {
+    "Region": "us-west-2"
   }
 }
