variable rename in appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Authority": "replace",
+    "Issuer": "replace",
     "Audience": "replace"
   },
   "Auth0App2": {
