move variable projectTagkey to appsettings json files

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -14,6 +14,7 @@
     "Audience": "Agusfassina"
   },
   "Aws":  {
-    "Region": "us-west-2"
+    "Region": "us-west-2",
+    "ProjectTagKey": "Project"
   }
 }
