--- a/appsettings.json
+++ b/appsettings.json
@@ -15,6 +15,7 @@
     "Audience": "Agusfassina"
   },
   "Aws":  {
-    "Region": "us-west-2"
+    "Region": "us-west-2",
+    "ProjectTagKey": "Project"
   }
 }
