variables rename in the services

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,11 +6,11 @@
     }
   },
   "Auth0": {
-    "Issuer": "replace",
+    "Authority": "replace",
     "Audience": "replace"
   },
   "Auth0App2": {
-    "Issuer": "AgusFassina",
+    "Authority": "AgusFassina",
     "Audience": "Agusfassina"
   },
   "Aws":  {
