--- a/appsettings.json
+++ b/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Issuer": "replace",
+    "Authority": "replace",
     "Audience": "replace"
   },
   "Auth0App2": {
-    "Issuer": "AgusFassina",
+    "Authority": "AgusFassina",
     "Audience": "Agusfassina"
   },
   "Aws":  {
